--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <section id="contact" class="contact">
             <h2>Contact Us</h2>
             <p>If you need computer repairs or have any questions, feel free to reach out to us:</p>
-            <p>Email: <a href="mailto:wayne1486@gmail.com">wayne1486@gmail.com</a></p>
+            <p>Email: <a href="mailto:winterhubitsolutions@gmail.com">winterhubitsolutions@gmail.com</a></p>
             <p>Phone: <a href="tel:+5926644601">+5926644601</a></p>
         </section>
     </main>
