--- a/contact.html
+++ b/contact.html
@@ -21,14 +21,17 @@
     <main class="container">
         <section id="contact" class="contact">
             <h2>Contact Us</h2>
-            <p>If you need computer repairs or have any questions, feel free to reach out to us:</p>
+            <p>For any IT solutions or inquiries, we encourage you to reach out to us:</p>
             <p>Email: <a href="mailto:winterhubitsolutions@gmail.com">winterhubitsolutions@gmail.com</a></p>
-            <p>Phone: <a href="tel:+5926644601">+5926644601</a></p>
+            <p>Phone: <a href="tel:+5926644601">+592 664 4601</a></p>
+            <p>WhatsApp: <a href="https://wa.me/5926644601">Message us on WhatsApp</a></p>
+            <h3>Business Hours</h3>
+            <p>Monday to Friday: 08:00 AM – 4:00 PM</p>
+            <p>Saturday & Sunday: Closed</p>
         </section>
     </main>
     <footer class="footer">
         &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
     </footer>
-    
 </body>
 </html>
