--- a/index.html
+++ b/index.html
@@ -34,45 +34,66 @@
             <h2>Our Services</h2>
             <div class="service-grid">
                 <div class="service-item">
-                    <a href="Computer Repairs.html">
-                        <img src="images/computer-repair.jpg" alt="Computer Repairs" class="service-image">
-                        <h3>Computer Repairs</h3>
-                        <p>Fast and reliable computer repair services.</p>
-                    </a>
-                </div>
-                <div class="service-item">
-                    <a href="Laptop Repairs.html">
-                        <img src="images/laptop-repair.jpg" alt="Laptop Repairs" class="service-image">
-                        <h3>Laptop Repairs</h3>
-                        <p>Expert laptop repairs to get you back on track.</p>
-                    </a>
-                </div>
-                <div class="service-item">
-                    <a href="PC Parts.html">
-                        <img src="images/pc-parts.jpg" alt="PC Parts" class="service-image">
-                        <h3>PC Parts</h3>
-                        <p>Quality parts for your computer upgrades.</p>
-                    </a>
-                </div>
-                <div class="service-item">
                     <a href="CCTV Camera Installation.html">
                         <img src="images/cctv-installation.jpg" alt="CCTV Camera Installation" class="service-image">
                         <h3>CCTV Camera Installation</h3>
                         <p>Secure your premises with our installation services.</p>
                     </a>
                 </div>
+                <div class="service-item">
+                    <a href="Data Management Backup.html">
+                        <img src="images/data-backup.webp" alt="Data Management & Backup" class="service-image">
+                        <h3>Data Management & Backup</h3>
+                        <p>Secure and reliable data management and backup solutions.</p>
+                    </a>
+                </div>
+                <div class="service-item">
+                    <a href="IT Consultation.html">
+                        <img src="images/it-consultation.png" alt="IT Consultation" class="service-image">
+                        <h3>IT Consultation</h3>
+                        <p>Professional IT strategy and consulting services.</p>
+                    </a>
+                </div>
+                <div class="service-item">
+                    <a href="Computer and Laptop Repairs.html">
+                        <img src="images/computer-laptop-repair.webp" alt="Computer and Laptop Repairs" class="service-image">
+                        <h3>Computer and Laptop Repairs</h3>
+                        <p>Fast and reliable repair services for both computers and laptops, including hardware repairs, software troubleshooting, and virus removal.</p>
+                    </a>
+                </div>
+                <div class="service-item">
+                    <a href="Networking Support.html">
+                        <img src="images/network-support.avif" alt="Networking Support" class="service-image">
+                        <h3>Networking Support</h3>
+                        <p>Comprehensive network setup and support services.</p>
+                    </a>
+                </div>
+                <div class="service-item">
+                    <a href="Virtual Environment Management.html">
+                        <img src="images/virtual-environment-management.jpeg" alt="Virtual Environment Management" class="service-image">
+                        <h3>Virtual Environment Management</h3>
+                        <p>Professional management of virtual environments to optimize performance and resource allocation.</p>
+                    </a>
+                </div>
+                <div class="service-item">
+                    <a href="VOIP Services.html">
+                        <img src="images/voip-services.jpg" alt="VOIP Services (FreePBX/Asterisk)" class="service-image">
+                        <h3>VOIP Services (FreePBX/Asterisk)</h3>
+                        <p>Professional VOIP solutions using FreePBX and Asterisk.</p>
+                    </a>
+                </div>
+                <div class="service-item">
+                    <a href="Windows Server Management.html">
+                        <img src="images/windows-server-management.jpg" alt="Windows Server Management" class="service-image">
+                        <h3>Windows Server Management</h3>
+                        <p>Efficient server management for your business needs.</p>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
-
     <footer>
         <p>&copy; 2024 WinterHub IT Solutions. All Rights Reserved.</p>
-        <ul class="social-icons">
-        
-        </ul>
-        <div class="whatsapp-contact">
-            <p>Contact us on WhatsApp: <a href="https://wa.me/5926644601" target="_blank">+5926644601</a></p>
-        </div>
     </footer>
 </body>
 </html>
