--- a/Windows Server Management.html
+++ b/Windows Server Management.html
@@ -55,8 +55,8 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 WinterHub IT Solutions. All Rights Reserved.</p>
+    <footer class="footer">
+        &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
     </footer>
 </body>
 </html>
