--- a/CCTV Camera Installation.html
+++ b/CCTV Camera Installation.html
@@ -48,8 +48,8 @@
             </div>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2024 WinterHub IT Solutions. All Rights Reserved.</p>
+    <footer class="footer">
+        &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
     </footer>
 </body>
 </html>
