--- a/Virtual Environment Management.html
+++ b/Virtual Environment Management.html
@@ -58,8 +58,8 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 WinterHub IT Solutions. All Rights Reserved.</p>
+    <footer class="footer">
+        &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
     </footer>
 </b.jvmpartner2.jpg
 </html>
