--- a/about.html
+++ b/about.html
@@ -12,9 +12,10 @@
 <body>
     <header>
         <div class="header-container">
-            <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
-            <h1>WinterHub IT Solutions</h1>
-        </div>
+            <div class="logo-name">
+                <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
+                <h1>WinterHub IT Solutions</h1>
+            </div>
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
