--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <header>
-        <div class="logo-name">
-            <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
-            <h1>WinterHub IT Solutions</h1>
-        </div>
+        <div class="header-container">
+            <div class="logo-name">
+                <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
+                <h1>WinterHub IT Solutions</h1>
+            </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
