--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
                 <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
                 <h1>WinterHub IT Solutions</h1>
             </div>
+            
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-        </nav>
+        </nav>  
     </header>
 
     <main class="container">
@@ -92,8 +92,9 @@
             </div>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2024 WinterHub IT Solutions. All Rights Reserved.</p>
+    <footer class="footer">
+        &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
