--- a/Windows Server Management.html
+++ b/Windows Server Management.html
@@ -1,26 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Expert management of Windows Server infrastructure, including Active Directory setup, backup solutions, and system monitoring for enhanced business performance.">
+    <meta name="keywords" content="Windows Server Management, Active Directory, backup solutions, system monitoring, security patch management">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>WinterHub IT Solutions - Windows Server Management</title>
     <link rel="icon" type="image/png" href="images/icon.png"/>
+    <title>WinterHub IT Solutions - Windows Server Management</title>
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="logo-name">
-                <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
-                <h1>WinterHub IT Solutions</h1>
+                <a href="index.html" class="logo-link" aria-label="WinterHub IT Solutions homepage">
+                    <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
+                    <span class="company-name">WinterHub IT Solutions</span>
+                </a>
             </div>
         </div>
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="About.html">About Us</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
+
+    <!-- Sidebar -->
+    <aside id="sidebar" class="sidebar">
+        <button class="close-btn" onclick="closeSidebar()" aria-label="Close sidebar">×</button>
+        <h2>Services</h2>
+        <ul>
+            <li><a href="CCTV Camera Installation.html">CCTV Installation</a></li>
+            <li><a href="Data Management Backup.html">Data Management & Backup</a></li>
+            <li><a href="IT Consultation.html">IT Consultation</a></li>
+            <li><a href="Computer and Laptop Repairs.html">Computer and Laptop Repairs</a></li>
+            <li><a href="Networking Support.html">Networking Support</a></li>
+            <li><a href="Virtual Environment Management.html">Virtual Environment Management</a></li>
+            <li><a href="VOIP Services.html">VOIP Services (FreePBX/Asterisk)</a></li>
+            <li><a href="Windows Server Management.html">Windows Server Management</a></li>
+        </ul>
+    </aside>
+
+    <button class="open-btn" onclick="openSidebar()" title="Click to view services">
+        ☰ <span>Services</span>
+    </button>
 
     <main class="container">
         <section class="hero">
@@ -31,32 +57,36 @@
         <section id="services" class="services">
             <h3>Key Services Include:</h3>
             <div class="service-grid">
-                <div class="service-item">
+                <article class="service-item">
                     <img src="images/Active-Directory-Setup.png" alt="Active Directory Setup" class="service-image">
                     <h4>Active Directory Setup and Management</h4>
                     <p>Expert setup and ongoing management of Active Directory for user and resource management.</p>
-                </div>
-                <div class="service-item">
+                </article>
+                <article class="service-item">
                     <img src="images/Server-Backup.jpeg" alt="Server Backup" class="service-image">
                     <h4>Server Backup and Recovery Solutions</h4>
                     <p>Reliable backup and recovery solutions to protect your data and ensure business continuity.</p>
-                </div>
-                <div class="service-item">
+                </article>
+                <article class="service-item">
                     <img src="images/System-Monitoring.jpeg" alt="System Monitoring" class="service-image">
                     <h4>System Monitoring and Performance Optimization</h4>
                     <p>Continuous monitoring and performance tuning of your servers for optimal operation.</p>
-                </div>
-                <div class="service-item">
+                </article>
+                <article class="service-item">
                     <img src="images/Security-Patch-Management.png" alt="Security Patch Management" class="service-image">
                     <h4>Security Patch Management and Compliance</h4>
                     <p>Regular patch management and compliance checks to maintain security and compliance standards.</p>
-                </div>
+                </article>
             </div>
+            <h3>Looking for Expert Windows Server Management?</h3>
+            <p>Contact us today to discuss how our Windows Server management services can benefit your business. <a href="contact.html" class="cta-button">Get in Touch</a></p>
         </section>
     </main>
 
     <footer class="footer">
-        &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
+        <p>&copy; 2024 WinterHub IT Solutions. All Rights Reserved.</p>
     </footer>
+
+    <script src="scripts.js" defer></script> <!-- Added defer for better loading performance -->
 </body>
 </html>
