--- a/Virtual Environment Management.html
+++ b/Virtual Environment Management.html
@@ -1,53 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Comprehensive virtual environment management services to optimize your IT infrastructure.">
+    <meta name="keywords" content="virtual environment management, virtualization setup, resource allocation, IT services, security management">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>WinterHub IT Solutions - Virtual Environment Management Services</title>
     <link rel="icon" type="image/png" href="images/icon.png"/>
+    <title>WinterHub IT Solutions - Virtual Environment Management Services</title>
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="logo-name">
-                <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
-                <h1>WinterHub IT Solutions</h1>
+                <a href="index.html" class="logo-link" aria-label="WinterHub IT Solutions homepage">
+                    <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
+                    <span class="company-name">WinterHub IT Solutions</span>
+                </a>
             </div>
         </div>
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="About.html">About Us</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-    
+
+    <!-- Sidebar -->
+    <aside id="sidebar" class="sidebar">
+        <button class="close-btn" onclick="closeSidebar()" aria-label="Close sidebar">×</button>
+        <h2>Services</h2>
+        <ul>
+            <li><a href="CCTV Camera Installation.html">CCTV Installation</a></li>
+            <li><a href="Data Management Backup.html">Data Management & Backup</a></li>
+            <li><a href="IT Consultation.html">IT Consultation</a></li>
+            <li><a href="Computer and Laptop Repairs.html">Computer and Laptop Repairs</a></li>
+            <li><a href="Networking Support.html">Networking Support</a></li>
+            <li><a href="Virtual Environment Management.html">Virtual Environment Management</a></li>
+            <li><a href="VOIP Services.html">VOIP Services (FreePBX/Asterisk)</a></li>
+            <li><a href="Windows Server Management.html">Windows Server Management</a></li>
+        </ul>
+    </aside>
+
+    <button class="open-btn" onclick="openSidebar()" title="Click to view services">
+        ☰ <span>Services</span>
+    </button>
+
     <main class="container">
         <section id="services" class="services">
             <h2>Virtual Environment Management Services Include:</h2>
             <div class="service-grid">
-                <div class="service-item">
+                <article class="service-item">
                     <img src="images/virtualization-setup.webp" alt="Virtualization Setup" class="service-image">
                     <h3>Virtualization Setup</h3>
                     <p>Setting up and configuring virtual environments using leading technologies for optimal performance and flexibility.</p>
-                </div>
-                <div class="service-item">
+                </article>
+                <article class="service-item">
                     <img src="images/resource-allocation.png" alt="Resource Allocation" class="service-image">
                     <h3>Resource Allocation</h3>
                     <p>Efficient management of resources within virtual environments to ensure maximum performance and reliability.</p>
-                </div>
-                <div class="service-item">
+                </article>
+                <article class="service-item">
                     <img src="images/monitoring-and-maintenance.webp" alt="Monitoring and Maintenance" class="service-image">
                     <h3>Monitoring and Maintenance</h3>
                     <p>Continuous monitoring and maintenance of virtual environments to ensure uptime and performance stability.</p>
-                </div>
-                <div class="service-item">
+                </article>
+                <article class="service-item">
                     <img src="images/security-management.jpeg" alt="Security Management" class="service-image">
                     <h3>Security Management</h3>
                     <p>Implementing security measures to protect virtual environments from vulnerabilities and threats.</p>
-                </div>
+                </article>
             </div>
+            <h3>Looking for Expert Virtual Environment Management?</h3>
+            <p>Contact us today to discuss how our services can optimize your IT infrastructure. <a href="contact.html" class="cta-button">Get in Touch</a></p>
         </section>
+
         <section class="partners">
             <div class="partners-logos">
                 <img src="images/vmpartner1.png" alt="Partner 1 Logo">
@@ -59,7 +88,9 @@
     </main>
 
     <footer class="footer">
-        &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
+        <p>&copy; 2024 WinterHub IT Solutions. All Rights Reserved.</p>
     </footer>
-</b.jvmpartner2.jpg
+
+    <script src="scripts.js" defer></script> <!-- Added defer for better loading performance -->
+</body>
 </html>
