--- a/About.html
+++ b/About.html
@@ -13,9 +13,13 @@
     <header>
         <div class="header-container">
             <div class="logo-name">
-                <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
-                <h1>WinterHub IT Solutions</h1>
+                <a href="index.html" class="logo-link" aria-label="WinterHub IT Solutions homepage">
+                    <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
+                    <span class="company-name">WinterHub IT Solutions</span>
+                </a>
             </div>
+        </div>
+        
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
