--- a/Contact.html
+++ b/Contact.html
@@ -11,9 +11,13 @@
     <header>
         <div class="header-container">
             <div class="logo-name">
-                <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
-                <h1>WinterHub IT Solutions</h1>
+                <a href="index.html" class="logo-link" aria-label="WinterHub IT Solutions homepage">
+                    <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
+                    <span class="company-name">WinterHub IT Solutions</span>
+                </a>
             </div>
+        </div>
+
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -35,7 +39,7 @@
         </section>
     </main>
     <footer class="footer">
-        <p>&copy; 2024 WinterHub IT Solutions. All Rights Reserved.</p>
+        &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
     </footer>
 </body>
 </html>
