--- a/CCTV Camera Installation.html
+++ b/CCTV Camera Installation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
             <div class="logo-name">
                 <a href="index.html" class="logo-link" aria-label="WinterHub IT Solutions homepage">
                     <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
-                    <span class="company-name">WinterHub IT Solutions</span>
+                    <span class="company-name brand-name">WinterHub IT Solutions</span>
                 </a>
             </div>
         </div>
@@ -51,7 +51,7 @@
     </button>
     
     <main class="container">
-        <section id="services" class="services">
+        <section id="home-services" class="services">
             <h2>CCTV Services Include:</h2>
             <div class="service-grid">
                 <article class="service-item">
@@ -75,6 +75,7 @@
                     <p>If you're unsure about the best CCTV camera solution for your needs, we offer expert consultation services to help you make the right choice.</p>
                 </article>
             </div>
+            
             <h3>Ready to Secure Your Space?</h3>
             <p>Contact us for professional CCTV installation and ensure your peace of mind. <a href="contact.html" class="cta-button">Get in Touch</a></p>
         </section>
@@ -84,6 +85,6 @@
         &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
     </footer>
 
-    <script src="scripts.js" defer></script> <!-- Added defer for better loading performance -->
+    <script src="scripts.js" defer></script> <!-- External JavaScript file for the functionality -->
 </body>
 </html>
