--- a/Contact.html
+++ b/Contact.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Get in touch with WinterHub IT Solutions for expert IT services including computer repairs, CCTV installation, and more.">
+    <meta name="keywords" content="Contact WinterHub IT Solutions, IT services, computer repairs, CCTV installation, customer support">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>WinterHub IT Solutions - Contact Us</title>
     <link rel="icon" type="image/png" href="images/icon.png"/>
@@ -13,33 +15,42 @@
             <div class="logo-name">
                 <a href="index.html" class="logo-link" aria-label="WinterHub IT Solutions homepage">
                     <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
-                    <span class="company-name">WinterHub IT Solutions</span>
+                    <span class="company-name brand-name">WinterHub IT Solutions</span>
                 </a>
             </div>
         </div>
 
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="About.html">About Us</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About.html">About Us</a></li>
+                <li><a href="CCTV Camera Installation.html">Services</a></li>
+            </ul>
+        </nav>
     </header>
+
     <main class="container">
         <section id="contact" class="contact">
             <h2>Contact Us</h2>
-            <p>For any IT solutions or inquiries, we encourage you to reach out to us:</p>
-            <p>Email: <a href="mailto:winterhubitsolutions@gmail.com">winterhubitsolutions@gmail.com</a></p>
-            <p>Phone: <a href="tel:+5926644601">+592 664 4601</a></p>
-            <p>WhatsApp: <a href="https://wa.me/5926644601">Message us on WhatsApp</a></p>
+            <p>For any IT solutions or inquiries, feel free to reach out to us. We’re here to help!</p>
+            
+            <div class="contact-details">
+                <p>Email: <a href="mailto:winterhubitsolutions@gmail.com">winterhubitsolutions@gmail.com</a></p>
+                <p>Phone: <a href="tel:+5926644601">+592 664 4601</a></p>
+                <p>WhatsApp: <a href="https://wa.me/5926644601">Message us on WhatsApp</a></p>
+            </div>
+
             <h3>Business Hours</h3>
             <p>Monday to Friday: 08:00 AM – 4:00 PM</p>
             <p>Saturday & Sunday: Closed</p>
+
         </section>
     </main>
+
     <footer class="footer">
         &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
     </footer>
+
+    <script src="scripts.js" defer></script> <!-- External JavaScript file for functionality -->
 </body>
 </html>
