--- a/Networking Support.html
+++ b/Networking Support.html
@@ -15,7 +15,7 @@
             <div class="logo-name">
                 <a href="index.html" class="logo-link" aria-label="WinterHub IT Solutions homepage">
                     <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
-                    <span class="company-name">WinterHub IT Solutions</span>
+                    <span class="company-name brand-name">WinterHub IT Solutions</span>
                 </a>
             </div>
         </div>
@@ -49,7 +49,7 @@
     </button>
 
     <main class="container">
-        <section id="services" class="services">
+        <section id="home-services" class="services">
             <h2>Networking Support Services Include:</h2>
             <div class="service-grid">
                 <article class="service-item">
@@ -64,7 +64,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 WinterHub IT Solutions. All Rights Reserved.</p>
+        &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
     </footer>
 
     <script src="scripts.js" defer></script> <!-- Added defer for better loading performance -->
