--- a/Windows Server Management.html
+++ b/Windows Server Management.html
@@ -15,7 +15,7 @@
             <div class="logo-name">
                 <a href="index.html" class="logo-link" aria-label="WinterHub IT Solutions homepage">
                     <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
-                    <span class="company-name">WinterHub IT Solutions</span>
+                    <span class="company-name brand-name">WinterHub IT Solutions</span>
                 </a>
             </div>
         </div>
@@ -54,7 +54,7 @@
             <p>Our team provides expert management of your Windows Server infrastructure, ensuring seamless operations and enhanced performance for your business.</p>
         </section>
 
-        <section id="services" class="services">
+        <section id="home-services" class="services">
             <h3>Key Services Include:</h3>
             <div class="service-grid">
                 <article class="service-item">
@@ -84,7 +84,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 WinterHub IT Solutions. All Rights Reserved.</p>
+        &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
     </footer>
 
     <script src="scripts.js" defer></script> <!-- Added defer for better loading performance -->
