--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WinterHub IT Solutions provides expert repairs, installations, and IT support services to keep your tech running smoothly.">
     <meta name="author" content="WinterHub IT Solutions">
     <meta name="robots" content="index, follow">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" type="image/png" href="images/icon.png">
+    <link rel="stylesheet" type="text/css" href="styles.css"> <!-- Link to external CSS file -->
+    <link rel="icon" type="image/png" href="images/icon.png"/>
     <title>WinterHub IT Solutions - Home</title>
 </head>
 <body>
@@ -16,11 +16,12 @@
             <div class="logo-name">
                 <a href="index.html" class="logo-link" aria-label="WinterHub IT Solutions homepage">
                     <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
-                    <span class="company-name">WinterHub IT Solutions</span>
+                    <span class="company-name brand-name">WinterHub IT Solutions</span>
                 </a>
             </div>
         </div>
-        
+
+        <!-- Navigation Bar -->
         <nav>
             <ul class="nav-links">
                 <li><a href="About.html">About Us</a></li>
@@ -30,66 +31,68 @@
     </header>
 
     <main class="container">
-        <section id="services" class="hero">
+        <!-- Hero Section -->
+        <section id="hero" class="hero">
             <h2>Your Trusted Partner for IT Solutions</h2>
             <p>Expert repairs, installations, and IT support services to keep your tech running smoothly.</p>
         </section>
 
-        <section id="services" class="services">
+        <!-- Services Section -->
+        <section id="home-services" class="services">
             <h2>Our Services</h2>
             <div class="service-grid">
                 <article class="service-item">
                     <a href="CCTV Camera Installation.html">
-                        <img src="images/cctv-installation.jpg" alt="CCTV Camera Installation" class="service-image">
+                        <img src="images/cctv-installation.jpg" alt="CCTV Camera Installation service" class="service-image">
                         <h3>CCTV Camera Installation</h3>
                         <p>Secure your premises with our installation services.</p>
                     </a>
                 </article>
                 <article class="service-item">
                     <a href="Data Management Backup.html">
-                        <img src="images/data-backup.webp" alt="Data Management & Backup" class="service-image">
+                        <img src="images/data-backup.webp" alt="Data Management and Backup service" class="service-image">
                         <h3>Data Management & Backup</h3>
                         <p>Secure and reliable data management and backup solutions.</p>
                     </a>
                 </article>
                 <article class="service-item">
                     <a href="IT Consultation.html">
-                        <img src="images/it-consultation.png" alt="IT Consultation" class="service-image">
+                        <img src="images/it-consultation.png" alt="IT Consultation service" class="service-image">
                         <h3>IT Consultation</h3>
                         <p>Professional IT strategy and consulting services.</p>
                     </a>
                 </article>
                 <article class="service-item">
                     <a href="Computer and Laptop Repairs.html">
-                        <img src="images/computer-laptop-repair.webp" alt="Computer and Laptop Repairs" class="service-image">
+                        <img src="images/computer-laptop-repair.webp" alt="Computer and Laptop Repairs service" class="service-image">
                         <h3>Computer and Laptop Repairs</h3>
                         <p>Fast and reliable repair services for computers and laptops.</p>
                     </a>
                 </article>
                 <article class="service-item">
                     <a href="Networking Support.html">
-                        <img src="images/network-support.avif" alt="Networking Support" class="service-image">
+                        <img src="images/network-support.avif" alt="Networking Support service" class="service-image">
                         <h3>Networking Support</h3>
                         <p>Comprehensive network setup and support services.</p>
                     </a>
                 </article>
                 <article class="service-item">
                     <a href="Virtual Environment Management.html">
-                        <img src="images/virtual-environment-management.jpeg" alt="Virtual Environment Management" class="service-image">
+                        <img src="images/virtual-environment-management.jpeg" alt="Virtual Environment Management service" class="service-image">
                         <h3>Virtual Environment Management</h3>
                         <p>Optimizing performance and resource allocation in virtual environments.</p>
                     </a>
                 </article>
                 <article class="service-item">
                     <a href="VOIP Services.html">
-                        <img src="images/voip-services.jpg" alt="VOIP Services (FreePBX/Asterisk)" class="service-image">
+                        <img src="images/voip-services.jpg" alt="VOIP Services (FreePBX/Asterisk) service" class="service-image">
                         <h3>VOIP Services (FreePBX/Asterisk)</h3>
                         <p>Professional VOIP solutions using FreePBX and Asterisk.</p>
                     </a>
                 </article>
                 <article class="service-item">
                     <a href="Windows Server Management.html">
-                        <img src="images/windows-server-management.jpg" alt="Windows Server Management" class="service-image">
+                        <img src="images/windows-server-management.jpg" alt="Windows Server Management service" class="service-image">
                         <h3>Windows Server Management</h3>
                         <p>Efficient server management for your business needs.</p>
                     </a>
@@ -102,5 +105,6 @@
         &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
     </footer>
 
+    <script src="scripts.js" defer></script> <!-- Link to external JS file with defer for better loading performance -->
 </body>
 </html>
