--- a/About.html
+++ b/About.html
@@ -15,7 +15,7 @@
             <div class="logo-name">
                 <a href="index.html" class="logo-link" aria-label="WinterHub IT Solutions homepage">
                     <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
-                    <span class="company-name">WinterHub IT Solutions</span>
+                    <span class="company-name brand-name">WinterHub IT Solutions</span>
                 </a>
             </div>
         </div>
@@ -65,5 +65,6 @@
     <footer class="footer">
         &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
     </footer>
+    <script src="scripts.js" defer></script> <!-- External JavaScript file for functionality -->
 </body>
 </html>
