--- a/Data Management Backup.html
+++ b/Data Management Backup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
             <div class="logo-name">
                 <a href="index.html" class="logo-link" aria-label="WinterHub IT Solutions homepage">
                     <img src="images/logo.jpeg" alt="WinterHub IT Solutions Logo" class="logo">
-                    <span class="company-name">WinterHub IT Solutions</span>
+                    <span class="company-name brand-name">WinterHub IT Solutions</span>
                 </a>
             </div>
         </div>
@@ -49,7 +49,7 @@
     </button>
 
     <main class="container">
-        <section id="services" class="services">
+        <section id="home-services" class="services">
             <h2>Data Management & Backup Services Include:</h2>
             <div class="service-grid">
                 <article class="service-item">
@@ -65,7 +65,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 WinterHub IT Solutions. All Rights Reserved.</p>
+        &copy; 2024 WinterHub IT Solutions. All Rights Reserved.
     </footer>
 
     <script src="scripts.js" defer></script> <!-- Added defer for better loading performance -->
